--- a/Project_Berkay_Yıldırım/requirements.txt
+++ b/Project_Berkay_Yıldırım/requirements.txt
@@ -148,7 +148,7 @@ intervaltree==2.1.0
 ipykernel==4.10.1
 ipython==5.5.0
 ipython-genutils==0.2.0
-ipython-sql==0.3.9
+jupysql
 ipywidgets==7.6.3
 itsdangerous==1.1.0
 jax==0.2.13
